--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -211,3 +211,11 @@ jhipster:
 # ===================================================================
 
 # application:
+graphql:
+  servlet:
+    # Sets if GraphQL servlet should be created and exposed. If not specified defaults to "true".
+    enabled: true
+    # Sets the path where GraphQL servlet will be exposed. If not specified defaults to "/graphql"
+    mapping: /graphql
+    # if you want to @ExceptionHandler annotation for custom GraphQLErrors
+    exception-handlers-enabled: true
